--- a/CoreMVC5_UsedBookProject/Views/Home/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Wish.cshtml
@@ -18,11 +18,11 @@
                             </div>
                             <div class="container-fluid my-2">
                                 <p title="@item.Title">@item.Title</p>
-                                <p>
+                                <p class="mb-0">
                                     <span>@Html.DisplayNameFor(model => model.ISBN):</span>
                                     <span title="@item.ISBN">@item.ISBN</span>
                                 </p>
-                                <p>
+                                <p class="mb-0">
                                     <span>@Html.DisplayNameFor(model => model.UserName):</span>
                                     <span title="@item.UserName">@item.UserName</span>
                                 </p>
