--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -13,7 +13,17 @@
                 {
                     <div class="col-3 col-xl-2 mt-4">
                         <div class="product-shop-card m-auto">
-                            <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="p-2 text-decoration-none">
+                            <a href="@Url.Action("Details", "Home", new {ProductId=@item.ProductId})" class="p-2 text-decoration-none" style="position: relative;">
+                                @if (User.Identity.IsAuthenticated)
+                                {
+                                    @if (User.IsInRole("User"))
+                                    {
+                                        @if (User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value == item.CreateBy)
+                                        {
+                                            <p style="position: absolute; top: 0; left: 0; background-color: green; width: 24px; color: white; border-radius: 15px;">My</p>
+                                        }
+                                    }
+                                }
                                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background-color: #A0522D50;">
                                     <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3, 3)}/{item.ISBN.Substring(3, 9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                                 </div>
