--- a/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Details.cshtml
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="~/lib/Swiper/swiper-bundle.min.css" />
     <!-- Demo styles -->
     <link rel="stylesheet" href="~/css/Swiper/Swiper.css" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 }
 @section endJS{
     <!-- Swiper JS -->
@@ -28,4 +29,5 @@
     <!-- Initialize Swiper -->
     <script src="~/js/Swiper/Swiper.js"></script>
     <script src="~/js/Seller/DetailsTablePartial.js" asp-append-version="true"></script>
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
 }
