--- a/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MyProducts.cshtml
@@ -95,31 +95,9 @@
                                 }
                                 @if (item.Status == "未上架")
                                 {
-                                    <!-- Button trigger modal -->
-                                    <button type="button" class="btn btn-outline-danger p-3 my-1" data-toggle="modal" data-target="#staticBackdrop">
+                                    <button type="button" class="btn btn-outline-danger p-3 my-1" onclick="checkDeleteProduct('@item.ProductId')">
                                         <i class="bi bi-trash"></i> 刪除
                                     </button>
-
-                                    <!-- Modal -->
-                                    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                                        <div class="modal-dialog">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h5 class="modal-title" id="staticBackdropLabel">確認刪除?</h5>
-                                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                        <span aria-hidden="true">&times;</span>
-                                                    </button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    確認移至刪除區?
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">返回</button>
-                                                    <a href="@Url.Action("Delete", "Seller", new {ProductId = item.ProductId, Trade = item.Trade})" class="btn btn-outline-danger"><i class="bi bi-trash"></i> 刪除</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
                                 }
                             </td>
                         </tr>
@@ -152,4 +130,8 @@
 </div>
 @section topCSS{
     <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
+}
+@section endJS{
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
 }
