--- a/CoreMVC5_UsedBookProject/wwwroot/css/Home/MyProducts.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/Home/MyProducts.css
@@ -13,18 +13,14 @@
         transition: .5s;
         border: 2px solid #8B451350;
     }
-    .product-shop-card > a > div > p {
+    .product-shop-card > a > div > p:nth-of-type(1), .product-shop-card > div > p:nth-of-type(1) {
+        height: 72px;
+    }
+    .product-shop-card > a > div > p, .product-shop-card > div > p {
         color: black;
-        height: 76.8px;
         overflow: hidden;
     }
-
-    .product-shop-card > a > div > p:nth-of-type(2) {
-        overflow: hidden;
-        height: 48px;
-    }
-
-    .product-shop-card > a > div > h3, .product-shop-card > a > div > p > span, .product-shop-card > a > h2 {
+    .product-shop-card > a > div > p > span {
         color: black;
         overflow: hidden;
     }
