--- a/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/Login.cshtml
@@ -10,6 +10,7 @@
     <div class="w-50 m-auto">
         <form asp-action="Login">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <p id="ErrorMessage" class="d-none">@TempData["Error"]</p>
             <div class="form-group">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
@@ -32,7 +33,10 @@
 </div>
 @section topCss{
     <link href="~/css/account/login.css" asp-append-version="true" rel="stylesheet" />
+    <link href="~/lib/sweetalert2/sweetalert2.min.css" rel="stylesheet" />
 }
 @section endJS{
+    <script src="~/lib/sweetalert2/sweetalert2.min.js"></script>
+    <script src="~/js/account/login.js" asp-append-version="true"></script>
     <partial name="_ValidationScriptsPartial" />
 }
