--- a/CoreMVC5_UsedBookProject/Views/AdminToUser/UserEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminToUser/UserEdit.cshtml
@@ -4,21 +4,43 @@
     ViewData["Title"] = "使用者資料編輯";
 }
 <style>
+    body {
+        background-image: url('/adminimg/mail1.jpg');
+    }
     .return {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: blue;
+        color: black;
+        background-color: #D1F0D4;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
         .return:hover {
+            color: black;
             text-decoration: none;
-            color: blue;
-            background-color: white;
-            border: 1px blue solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+        }
+
+    .edit {
+        padding: 10px;
+        text-decoration: none;
+        color: black;
+        background-color: #DAD1F0;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
+    }
+
+        .edit:hover {
+            color: black;
+            text-decoration: none;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 </style>
 <h1>使用者資料編輯</h1>
@@ -30,7 +52,7 @@
         <form asp-action="UserEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
           <div class="form-group" style="display:flex; flex-direction:column;  gap:10px;">
-            <div class="form-group">
+            <div class="form-group" style="display:none;">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" readonly />
                 <span asp-validation-for="Id" class="text-danger"></span>
@@ -64,6 +86,6 @@
 </div>
 
 <div>
-    <a asp-controller="AdminToUser" asp-action="UserData" class="return">返回使用者資料列表</a>
+    <a asp-controller="AdminToUser" asp-action="UserData" class="edit">返回使用者資料列表</a>
 </div>
 
