--- a/CoreMVC5_UsedBookProject/Views/AdminToUser/UserSuspension.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminToUser/UserSuspension.cshtml
@@ -6,60 +6,74 @@
     .return {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: blue;
+        color: black;
+        background-color: #D1F0D4;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
         .return:hover {
+            color: black;
             text-decoration: none;
-            color: blue;
-            background-color: white;
-            border: 1px blue solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 
-    .top {
+    .edit {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: rgb(80, 160, 220);
+        color: black;
+        background-color: #DAD1F0;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
-        .top:hover {
+        .edit:hover {
+            color: black;
             text-decoration: none;
-            color: rgb(80, 160, 220);
-            background-color: white;
-            border: 1px rgb(80, 160, 220) solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 
-    .Suspension {
+    .delete {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: rgb(185, 185, 185);
+        color: black;
+        background-color: #F5D0D0;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
-        .Suspension:hover {
+        .delete:hover {
+            color: black;
             text-decoration: none;
-            color: rgb(185, 185, 185);
-            background-color: white;
-            border: 1px rgb(185, 185, 185) solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+        }
+
+    .list {
+        background-color: #FADFB7;
+        padding: 1.3rem 0.75rem;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
+    }
+
+        .list:hover {
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 </style>
-<h4 class="alert alert-danger">使用者個人資料明細</h4>
+<h4 colspan="5" class="text-center btn-info list" style="background-color:#A3998E; color:white;">使用者個人資料明細</h4>
 
 
 <div>
     <hr />
-    <dl class="row">
+    <dl class="row" style="font-size:25px;">
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Name)</dt>
         <dd class="col-sm-9">@Html.DisplayFor(m => m.Name)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Nickname)</dt>
@@ -71,7 +85,7 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="AdminToUser" asp-action="Seller" asp-route-id="@Model.Id" class="top">啟用權限</a>|
-    <a asp-controller="AdminToUser" asp-action="Administrator" asp-route-id="@Model.Id" class="Suspension">停用使用者權限</a>|
+    <a asp-controller="AdminToUser" asp-action="Seller" asp-route-id="@Model.Id" class="delete">啟用權限</a>
+    <a asp-controller="AdminToUser" asp-action="Administrator" asp-route-id="@Model.Id" class="edit">停用使用者權限</a>
     <a asp-controller="AdminToUser" asp-action="UserData" class="return">返回使用者資料列表</a>
 </div>
