--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorSuspension.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorSuspension.cshtml
@@ -3,79 +3,86 @@
     ViewData["Title"] = "管理員權限更改";
 }
 <style>
-.return {
-    padding: 10px;
-    text-decoration: none;
-    color: white;
-    background-color: blue;
-    transition: 0.7s;
-    border-radius: 5px;
-    border: 0;
-}
-
-.return:hover {
-    text-decoration: none;
-    color: blue;
-    background-color: white;
-    border: 1px blue solid;
-}
-
-    .top {
+    .return {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: rgb(80, 160, 220);
+        color: black;
+        background-color: #D1F0D4;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
-        .top:hover {
+        .return:hover {
+            color: black;
             text-decoration: none;
-            color: rgb(80, 160, 220);
-            background-color: white;
-            border: 1px rgb(80, 160, 220) solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+        }
+
+    .edit {
+        padding: 10px;
+        text-decoration: none;
+        color: black;
+        background-color: #DAD1F0;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
+    }
+
+        .edit:hover {
+            color: black;
+            text-decoration: none;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+        }
+
+    .delete {
+        padding: 10px;
+        text-decoration: none;
+        color: black;
+        background-color: #F5D0D0;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
+    }
+
+        .delete:hover {
+            color: black;
+            text-decoration: none;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 
     .common {
-        padding: 10px;
-        text-decoration: none;
-        color: white;
-        background-color: rgb(255, 150, 160);
-        transition: 0.7s;
-        border-radius: 5px;
-        border: 0;
+        background-color: #EFEBE7;
+        padding: 1.3rem 0.75rem;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
-    .common:hover {
-            text-decoration: none;
-            color: rgb(255, 150, 160);
-            background-color: white;
-            border: 1px rgb(255, 150, 160)solid;
+        .common:hover {
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
-
-    .Suspension {
-        padding: 10px;
-        text-decoration: none;
-        color: white;
-        background-color: rgb(185, 185, 185);
-        transition: 0.7s;
-        border-radius: 5px;
-        border: 0;
+    .list {
+        background-color: #FADFB7;
+        padding: 1.3rem 0.75rem;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
-    .Suspension:hover {
-            text-decoration: none;
-            color: rgb(185, 185, 185);
-            background-color: white;
-            border: 1px rgb(185, 185, 185) solid;
+        .list:hover {
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 </style>
-<h4 class="alert alert-danger">管理員個人資料明細</h4>
+<h4 colspan="5" class="text-center btn-info list" style="background-color:#A3998E; color:white;">管理員個人資料明細</h4>
 
 <div>
     <hr />
-    <dl class="row">
+    <dl class="row" style="font-size:25px;">
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Name)</dt>
         @{
             string email = User.Identity.Name;
@@ -92,8 +99,8 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="AdministratorProfile" asp-action="TopAdministrator" asp-route-id="@Model.Id" class="top">設為一級管理員</a>|
-    <a asp-controller="AdministratorProfile" asp-action="commonAdministrator" asp-route-id="@Model.Id" class="common">設為二級管理員</a>|
-    <a asp-controller="AdministratorProfile" asp-action="SuspendedAdministrator" asp-route-id="@Model.Id" class="Suspension">停用管理員權限</a>|
+    <a asp-controller="AdministratorProfile" asp-action="TopAdministrator" asp-route-id="@Model.Id" class="delete">設為一級管理員</a>|
+    <a asp-controller="AdministratorProfile" asp-action="commonAdministrator" asp-route-id="@Model.Id" class="edit">設為二級管理員</a>|
+    <a asp-controller="AdministratorProfile" asp-action="SuspendedAdministrator" asp-route-id="@Model.Id" class="common">停用管理員權限</a>|
     <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="return">返回管理員資料列表</a>
 </div>
