--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoList.cshtml
@@ -4,37 +4,43 @@
     ViewData["Title"] = "待辦清單";
 }
 <link href="~/css/datachange.css" rel="stylesheet" />
+<style>
+    .content, .content * {
+        font-family: 標楷體;
+    }
 
+        .content table td, .content table th {
+            font-size: 20px;
+            font-weight: normal;
+        }
+</style>
 
-<div style="display:flex;">
-    </div>
-    <div class="content" style="width:100VW;">
+    <div class="content" style=" margin:5px 30px 0 30px;">
         <table class="table table-striped table-bordered table-hover">
-            <thead>
+            <thead style="font-size:25px; font-weight:bold;">
                 <tr style="text-align:center;">
-                    <th colspan="5" class="text-center btn-info">待辦清單</th>
+                <th colspan="5" class="text-center btn-info" style="background-color:#A3998E; color:white;">待辦清單</th>
                 </tr>
                 <tr style="text-align:center;">
                     <th>@Html.DisplayNameFor(m => m.FirstOrDefault().Date)</th>
-                    <th>@Html.DisplayNameFor(m => m.FirstOrDefault().Maintitle)</th>
-                    <th>資料變更</th>
+                <th style ="width:400px;">@Html.DisplayNameFor(m => m.FirstOrDefault().Maintitle)</th>
+                    <th style="width:500px;">資料變更</th>
                     <th>完成度</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody style="font-size:20px;">
                 @foreach (var item in Model)
                 {
-                    <tr style="text-align:center; width:778px;height:40px;">
+                    <tr style="text-align:center;height:40px;">
                         <td class="1">@item.Date</td>
-                        <td class ="2">@item.Maintitle</td>
-                        <td style="overflow:hidden; display:flex; flex-wrap:wrap; justify-content:space-evenly; gap:5px;">
-                            <a href="/AdministratorToDoList/DoListDetail?id=@item.Id" class="btnadmin" style="width:140px;height:40px;background-color:#007bff;text-decoration:none;color:white;">詳細資料</a>
-                            <a href="/AdministratorToDoList/DoListSuspension?id=@item.Id" class="btnadmin" style="width:140px;height:40px;background-color:#FFA500;text-decoration:none;color:white;">確認完成</a>
+                    <td class="2" style="width:400px;">@item.Maintitle</td>
+                        <td style="overflow:hidden; display:flex; flex-wrap:wrap; justify-content:space-evenly; gap:15px; width:500px;">
+                        <a href="/AdministratorToDoList/DoListDetail?id=@item.Id" class="btnadmin" style="font-weight:normal; width:140px;height:40px;background-color:#D1F0D4;text-decoration:none;color:black;">詳細資料</a>
+                        <a href="/AdministratorToDoList/DoListSuspension?id=@item.Id" class="btnadmin" style="font-weight:normal; width:140px;height:40px;background-color:#DAD1F0;text-decoration:none;color:black;">確認完成</a>
                         </td>
-
                         <td>@item.RoleName</td>
                     </tr>
                 }
             </tbody>
         </table>
-</div>
+    </div>
