--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListDetailForAdmin.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListDetailForAdmin.cshtml
@@ -6,43 +6,56 @@
     .return {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: blue;
+        color: black;
+        background-color: #D1F0D4;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
         .return:hover {
+            color: black;
             text-decoration: none;
-            color: blue;
-            background-color: white;
-            border: 1px blue solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 
     .edit {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: #66cdaa;
+        color: black;
+        background-color: #DAD1F0;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
         .edit:hover {
+            color: black;
             text-decoration: none;
-            color: #66cdaa;
-            background-color: white;
-            border: 1px #66cdaa solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+        }
+
+    .list {
+        background-color: #FADFB7;
+        padding: 1.3rem 0.75rem;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
+    }
+
+        .list:hover {
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 </style>
-<h4 class="alert alert-danger">待辦清單明細</h4>
+<h4 colspan="5" class="text-center btn-info list" style="background-color:#A3998E; color:white;">待辦清單明細</h4>
 
 
 <div>
     <hr />
-    <dl class="row">
+    <dl class="row" style="font-size:25px;">
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Date)</dt>
         <dd class="col-sm-9">@Html.DisplayFor(m => m.Date)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Maintitle)</dt>
@@ -53,5 +66,5 @@
 </div>
 <div>
     <a href="/AdministratorToDoList/DoListEdit?id=@Model.Id" class="return">編輯</a>
-    <a asp-controller="AdministratorToDoList" asp-action="DolistForCheck" class="return">回待辦事項審核</a>
+    <a asp-controller="AdministratorToDoList" asp-action="DolistForCheck" class="edit">回待辦事項審核</a>
 </div>
