--- a/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListSuspension.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorToDoList/DoListSuspension.cshtml
@@ -6,76 +6,72 @@
     .return {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: blue;
+        color: black;
+        background-color: #D1F0D4;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
         .return:hover {
+            color: black;
             text-decoration: none;
-            color: blue;
-            background-color: white;
-            border: 1px blue solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 
-    .top {
+    .edit {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: rgb(80, 160, 220);
+        color: black;
+        background-color: #DAD1F0;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
-        .top:hover {
+        .edit:hover {
+            color: black;
             text-decoration: none;
-            color: rgb(80, 160, 220);
-            background-color: white;
-            border: 1px rgb(80, 160, 220) solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 
-    .common {
+    .delete {
         padding: 10px;
         text-decoration: none;
-        color: white;
-        background-color: rgb(255, 150, 160);
+        color: black;
+        background-color: #F5D0D0;
         transition: 0.7s;
         border-radius: 5px;
         border: 0;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
-        .common:hover {
+        .delete:hover {
+            color: black;
             text-decoration: none;
-            color: rgb(255, 150, 160);
-            background-color: white;
-            border: 1px rgb(255, 150, 160)solid;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
-
-    .Suspension {
-        padding: 10px;
-        text-decoration: none;
-        color: white;
-        background-color: rgb(185, 185, 185);
-        transition: 0.7s;
-        border-radius: 5px;
-        border: 0;
+    .list {
+        background-color: #FADFB7;
+        padding: 1.3rem 0.75rem;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        font-size: 25px;
     }
 
-        .Suspension:hover {
-            text-decoration: none;
-            color: rgb(185, 185, 185);
-            background-color: white;
-            border: 1px rgb(185, 185, 185) solid;
+        .list:hover {
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 </style>
-<h4 class="alert alert-danger">待辦清單明細</h4>
+<h4 colspan="5" class="text-center btn-info list" style="background-color:#A3998E; color:white;">待辦清單明細</h4>
 
 <div>
     <hr />
-    <dl class="row">
+    <dl class="row" style="font-size:25px;">
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Date)</dt>
         <dd class="col-sm-9">@Html.DisplayFor(m => m.Date)</dd>
         <dt class="col-sm-2">@Html.DisplayNameFor(m => m.Maintitle)</dt>
@@ -85,7 +81,7 @@
     </dl>
 </div>
 <div>
-    <a asp-controller="AdministratorToDoList" asp-action="done" asp-route-id="@Model.Id" class="common">確認完成</a>
-    <a asp-controller="AdministratorToDoList" asp-action="undone" asp-route-id="@Model.Id" class="Suspension">完成取消</a>
+    <a asp-controller="AdministratorToDoList" asp-action="done" asp-route-id="@Model.Id" class="delete">確認完成</a>
+    <a asp-controller="AdministratorToDoList" asp-action="undone" asp-route-id="@Model.Id" class="edit">完成取消</a>
     <a asp-controller="AdministratorToDoList" asp-action="DoList" class="return">返回待辦事項清單</a>
 </div>
