--- a/CoreMVC5_UsedBookProject/Views/Administratorlist/Adminlist.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Administratorlist/Adminlist.cshtml
@@ -89,6 +89,13 @@
                 </svg>使用者批量管理
             </a>
         </p>
+        <p class="menu-item whfora" style="height:10%;">
+            <a asp-controller="Messenger" asp-action="enter" class="navtext" style="min-width:368px;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-megaphone" viewBox="0 0 16 16" style="margin-right:10px;">
+                    <path d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-.214c-2.162-1.241-4.49-1.843-6.912-2.083l.405 2.712A1 1 0 0 1 5.51 15.1h-.548a1 1 0 0 1-.916-.599l-1.85-3.49a68.14 68.14 0 0 0-.202-.003A2.014 2.014 0 0 1 0 9V7a2.02 2.02 0 0 1 1.992-2.013 74.663 74.663 0 0 0 2.483-.075c3.043-.154 6.148-.849 8.525-2.199V2.5zm1 0v11a.5.5 0 0 0 1 0v-11a.5.5 0 0 0-1 0zm-1 1.35c-2.344 1.205-5.209 1.842-8 2.033v4.233c.18.01.359.022.537.036 2.568.189 5.093.744 7.463 1.993V3.85zm-9 6.215v-4.13a95.09 95.09 0 0 1-1.992.052A1.02 1.02 0 0 0 1 7v2c0 .55.448 1.002 1.006 1.009A60.49 60.49 0 0 1 4 10.065zm-.657.975 1.609 3.037.01.024h.548l-.002-.014-.443-2.966a68.019 68.019 0 0 0-1.722-.082z" />
+                </svg>公告發布
+            </a>
+        </p>
         <p class="navtextbg whfora" style="font-weight:bold; cursor:default;height:10%; min-width:368px;">
             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="auto" fill="currentColor" class="bi bi-activity" viewBox="0 0 16 16" style="margin-right:10px;">
                 <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2Z" />
@@ -130,7 +137,6 @@
         <div class="row">
             <div class="content" style="width:100%;">
                 <h1>管理員控制中心</h1>
-
                 @if (User.Identity.IsAuthenticated)
                 {
                     string name = User.Identity.Name;
