--- a/CoreMVC5_UsedBookProject/Views/Messenger/enterEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Messenger/enterEdit.cshtml
@@ -1,13 +1,9 @@
-﻿@model CoreMVC5_UsedBookProject.ViewModels.ToDoListViewModels
+﻿@model CoreMVC5_UsedBookProject.Models.announcement
 
 @{
-    ViewData["Title"] = "待辦事項編輯";
+    ViewData["Title"] = "公告編輯";
 }
 <style>
-    body {
-        background-image: url('/adminimg/mail1.jpg');
-    }
-
     .return {
         padding: 10px;
         text-decoration: none;
@@ -44,36 +40,30 @@
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
         }
 </style>
-<h1>待辦事項編輯</h1>
+<h1>管理員資料編輯</h1>
 
-<h4>待辦事項清單</h4>
+<h4>管理員個人資料</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="DoListEdit" style="width:1200px;">
+        <form asp-action="enterCreate">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" style="display:flex; flex-direction:column;  gap:10px;">
-                <div style="display:flex; display:none;" >
-                    <label asp-for="Id" class="control-label" style="width:10%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="Id" class="form-control" />
+                <div style="display:flex;display:none;">
+                    <label asp-for="Id" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <input asp-for="Id" readonly class="form-control" />
                     <span asp-validation-for="Id" class="text-danger"></span>
                 </div>
                 <div style="display:flex;">
-                    <label asp-for="Date" class="control-label" style="width:10%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="Date" class="form-control" />
-                    <span asp-validation-for="Date" class="text-danger"></span>
+                    <label asp-for="Message" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <input asp-for="Message" class="form-control" />
+                    <span asp-validation-for="Message" class="text-danger"></span>
                 </div>
                 <div style="display:flex;">
-                    <label asp-for="Maintitle" class="control-label" style="width:10%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="Maintitle" class="form-control" />
-                    <span asp-validation-for="Maintitle" class="text-danger"></span>
+                    <label asp-for="CreatedAt" class="control-label" style="width:30%; text-align:center; font-weight:bold; font-size:25px;"></label>
+                    <input asp-for="CreatedAt" class="form-control" />
+                    <span asp-validation-for="CreatedAt" class="text-danger"></span>
                 </div>
-                <div style="display:flex;">
-                    <label asp-for="Subtitle" class="control-label" style="width:10%; text-align:center; font-weight:bold; font-size:25px;"></label>
-                    <input asp-for="Subtitle" class="form-control"/>
-                    <span asp-validation-for="Subtitle" class="text-danger"></span>
-                </div>
-
                 <div class="form-group">
                     <input type="submit" value="保存" class="return" />
                 </div>
@@ -83,7 +73,7 @@
 </div>
 
 <div style="margin-top:10px">
-    <a asp-controller="AdministratorToDoList" asp-action="DolistForCheck" class="edit">回待辦事項審核</a>
+    <a asp-controller="Messenger" asp-action="enter" class="edit">返回公告設定</a>
 </div>
 
 @section Scripts {
