--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdministratorlist.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdministratorlist.cshtml
@@ -31,9 +31,6 @@
                             <li class="nav-item">
                                 <a class="nav-link " style="color:white; background-color: #4e4e4e;border: 0 solid;" asp-area="" asp-controller="Home" asp-action="Index">主頁面</a>
                             </li>
-                            <li class="nav-item">
-                                
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -49,7 +46,7 @@
     <footer class="border-top footer text-muted" style="background-color:white; position:fixed;">
         <div class="container-footer d-flex justify-content-between">
             <div>
-                &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
+                &copy; 2023 - CoreMVC5_UsedBookProject
             </div>
             <div>
                 <partial name="_AdminLoginStatusPartial" />
