--- a/CoreMVC5_UsedBookProject/wwwroot/css/DataChange.css
+++ b/CoreMVC5_UsedBookProject/wwwroot/css/DataChange.css
@@ -12,7 +12,7 @@
     -webkit-tap-highlight-color: transparent;
     -webkit-appearance: button;
     background-image: none;
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-family: Andale Mono, monospace;
     font-size: 18px;
     line-height: 1.5;
     margin: 0;
@@ -27,7 +27,7 @@
     position: relative;
     text-transform: uppercase;
     transition: 0.2s;
-    box-shadow: 0 6px 0 -4px #fff, 0 9px 0 -4px #aaa, 0 12px 0 -4px #000;
+    box-shadow: 0 3px 0 -4px #a9a9a9, 0 6px 0 -4px #a9a9a9, 0 9px 0 -4px #a9a9a9;
     transform: translateY(0);
 }
 
