--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -13,7 +13,7 @@
                     <input asp-for="ISBN" class="form-control" />
                     <span asp-validation-for="ISBN" class="text-danger"></span>
                 </div>
-                <button class="btn btn-outline-success my-1" onclick="searchByISBN()" type="button">api查詢書籍</button>
+                <button class="btn btn-outline-success my-1" onclick="searchByISBN()" type="button">查詢書籍</button>
                 <div class="form-group">
                     <label asp-for="Title" class="control-label"></label>
                     <input asp-for="Title" class="form-control" />
