--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -19,7 +19,7 @@
                         <p class="text-left">我的商品<br>@Model.BuyerName</p>
                     </td>
                     <td>
-                        @if (Model.BuyerISBN != "1234567891234")
+                        @if (Model.BuyerISBN == "1234567891234")
                         {
                             <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px; background-color: white;">
                                 <img src=@($"/DeafultPictures/DeafultBookPicture.jpg") asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
