--- a/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/Swiper.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/DetailsTablePartial/Swiper.cshtml
@@ -30,14 +30,14 @@
                 }
                 <div class="swiper-wrapper">
                     <div class="swiper-slide p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; min-width: 100px; border: 1px solid black;">
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.ISBN.Substring(3,3)}/{Model.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.ISBN.Substring(3,3)}/{Model.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.Title" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                     </div>
                     @if (list.Length > 0)
                     {
                         @foreach (string item in list)
                         {
                             <div class="swiper-slide d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; min-width: 100px; border: 1px solid black;">
-                                <img src="/Images/Users/@Model.CreateBy/Products/@Model.ProductId/@item" asp-append-version="true" class="m-auto" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" alt="@Model.Title" />
+                                <img src="/Images/Users/@Model.CreateBy/Products/@Model.ProductId/@item" asp-append-version="true" class="m-auto" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'" alt="@Model.Title" />
                             </div>
                         }
                     }
@@ -48,14 +48,14 @@
             <div thumbsSlider="" class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide d-flex align-items-center" style="width: 130.5px; aspect-ratio: 1 / 1;">
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.ISBN.Substring(3,3)}/{Model.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.Title" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{Model.ISBN.Substring(3,3)}/{Model.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@Model.Title" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'" />
                     </div>
                     @if (list.Length > 0)
                     {
                         @foreach (var item in list)
                         {
                             <div class="swiper-slide d-flex align-items-center" style="width: 130.5px; aspect-ratio: 1 / 1;">
-                                <img src="/Images/Users/@Model.CreateBy/Products/@Model.ProductId/@item" asp-append-version="true" class="m-auto" onerror="this.src='/DeafultPictures/DeafultBookPicture.jpg'" alt="@Model.Title" />
+                                <img src="/Images/Users/@Model.CreateBy/Products/@Model.ProductId/@item" asp-append-version="true" class="m-auto" onerror="this.onerror='';this.src='/DeafultPictures/DeafultBookPicture.jpg'" alt="@Model.Title" />
                             </div>
                         }
                     }
